add sampler for test_loader.

--- a/conf.yaml
+++ b/conf.yaml
@@ -1,12 +1,12 @@
 base:
   model: 'CSDI'
-  is_train: True
+  is_train: False
   random_seed: 202221543
   train_ratio: 0.7
   validation_ratio: 0.1
   missing_rate: 0.1
   dataset_path: dataset/humidity/humidity_20per_missing.csv
-  load_path: 'result\20240724_T185416\CSDI_epoch21_loss0.2962237745523453.pypots'
+  load_path: 'result/20240724_T220329/CSDI_epoch20_loss0.2687181351231594.pypots'
   target:
     - humidity_missing
   n_samples: 100 # generative model need samples times 
